add perf module

--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
     ></script>
     <script src="https://www.gstatic.com/firebasejs/7.9.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.9.1/firebase-analytics.js"></script>
-
+    <script src="https://www.gstatic.com/firebasejs/7.9.1/firebase-performance.js"></script>
     <script>
       var firebaseConfig = {
         apiKey: "AIzaSyCUm2XU-INO-bx0cJclYB1S8zjMxP3Dtks",
@@ -259,6 +259,7 @@
       };
       firebase.initializeApp(firebaseConfig);
       firebase.analytics();
+      firebase.performance();
     </script>
 
     <script src="https://unpkg.com/magic-snowflakes/dist/snowflakes.min.js"></script>
