--- a/index.html
+++ b/index.html
@@ -96,31 +96,31 @@
       <br />
       💖 C#, Q#, X#, C++, asm, R 💖
       <br />
-      <a title="Telegram" href="https://t.me/ivysola">
+      <a title="Telegram" href="https://ivy.run/telegram">
         @ivysola
       </a>
-      <a title="Discord" href="https://discordapp.com/users/248481541708185600">
+      <a title="Discord" href="https://ivy.run/discord">
         Cytosine#1448
       </a>
       <br />
       <a
         title="Clip Studio Profile"
-        href="https://profile.clip-studio.com/en-us/profile/pco1ikw3-4w"
+        href="https://ivy.run/clip-studio"
       >
         Clip Studio Profile
       </a>
       <hr />
       <div id="bottom">
-        <a href="https://github.com/0xF6">github</a> |
-        <a href="https://keybase.io/ivysola/">keybase</a> |
-        <a href="https://myanimelist.net/animelist/IvySola">MAL</a>
+        <a href="https://ivy.run/github">github</a> |
+        <a href="https://ivy.run/keybase">keybase</a> |
+        <a href="https://ivy.run/mal">MAL</a>
         <br />
-        <a href="https://codestats.net/users/rijndael">codestats</a> |
-        <a href="https://artstation.com/void-less">artstation</a> |
-        <a href="https://twitter.com/crown_sulfate">twitter</a>
+        <a href="https://ivy.run/codestats">codestats</a> |
+        <a href="https://ivy.run/artstation">artstation</a> |
+        <a href="https://ivy.run/twitter">twitter</a>
         <br />
-        <a href="https://www.last.fm/user/Ivysola">last.fm</a> |
-        <a href="https://open.spotify.com/user/happysperm">Spotify</a>
+        <a href="https://ivy.run/lastfm">last.fm</a> |
+        <a href="https://ivy.run/spotify">Spotify</a>
       </div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/88/three.min.js"></script>
