--- a/index.html
+++ b/index.html
@@ -122,122 +122,7 @@
         <a href="https://ivy.run/spotify">Spotify</a>
       </div>
     </div>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/88/three.min.js"></script>
-    <script id="vertexShader" type="x-shader/x-vertex">
-        void main() {
-            gl_Position = vec4( position, 1.0 );
-        }
-    </script>
-    <script id="fragmentShader" type="x-shader/x-fragment">
-    uniform vec2 u_resolution;
-    uniform vec2 u_mouse;
-    uniform float u_time;
-    uniform vec3 u_colours[ 5 ];
-    uniform sampler2D u_clouds;
-    
-    const float multiplier = 1.5;
-    const float zoomSpeed = 4.;
-    const int layers = 10;
-    const int octaves = 1;
-    const float seed = 43758.5453123;
-    const float seed2 = 73156.8473192;
-
-    float random(float val) {
-      return fract(sin(val) * seed);
-    }
-    vec2 random2(vec2 st, float seed){
-        st = vec2( dot(st,vec2(127.1,311.7)),
-                  dot(st,vec2(269.5,183.3)) );
-        return -1.0 + 2.0*fract(sin(st)*seed);
-    }
-    mat2 rotate2d(float _angle){
-        return mat2(cos(_angle),sin(_angle),
-                    -sin(_angle),cos(_angle));
-    }
-    float noise(vec2 st, float seed) {
-        vec2 i = floor(st);
-        vec2 f = fract(st);
-        vec2 u = f*f*(3.0-2.0*f);
-        return mix( mix( dot( random2(i + vec2(0.0,0.0), seed ), f - vec2(0.0,0.0) ), 
-                         dot( random2(i + vec2(1.0,0.0), seed ), f - vec2(1.0,0.0) ), u.x),
-                    mix( dot( random2(i + vec2(0.0,1.0), seed ), f - vec2(0.0,1.0) ), 
-                         dot( random2(i + vec2(1.0,1.0), seed ), f - vec2(1.0,1.0) ), u.x), u.y);
-    }
-    float fbm(in vec2 st, float seed) {
-      float value = 0.0;
-      float amp = 0.5;
-      vec2 shift = vec2(100);
-      mat2 rot = mat2(cos(1.5), sin(1.5), -sin(1.5), cos(1.50));
-      for (int i = 0; i < octaves; ++i) {
-        value += amp * abs(noise(st, seed));
-        st = rot * st * 2.0 + shift;
-        amp *= 0.5;
-      }
-      return value;
-    }
-    vec3 renderNoise(vec2 uv) {
-      float r = fbm(uv, seed);
-      return vec3(r * r * 10.);
-    }
-    vec3 render(vec2 uv, float multiplier, inout vec2 id) {
-      return texture2D(u_clouds, uv).rgb;
-    }
-    vec3 renderLayer(int layer, int layers, vec2 uv, inout float opacity, inout vec2 id, in vec3 colour) {
-      float scale = mod((u_time + zoomSpeed / float(layers) * float(layer)) / zoomSpeed, -1.);
-      float vignette = smoothstep(.1, .3, length(uv * scale * 1.5));
-      uv *= 1. + scale; // The initial scale. Increasing this makes the cells smaller and the "speed" apepar faster
-      uv *= (1. + random(float(layer)));
-      uv *= scale; // then modifying the overall scale by the generated amount
-      uv = rotate2d((u_time * .1 + (scale*2.))) * uv;
-      vec3 pass = render(uv * multiplier + colour.z, multiplier, id);
-      opacity = clamp(1. + scale * 1.1, 0., 1.) - smoothstep(.5, 0.2, pass.x);
-      opacity -= smoothstep(.0, .8, clamp(1. - vignette * 2. * (1. + (scale) * -1.) * pass.x, 0., 1.));
-      float _opacity = opacity;
-      float endOpacity = 1.;
-      endOpacity = smoothstep(0., 0.05, scale * -1.);
-      opacity += endOpacity;
-      return clamp(pass * _opacity * endOpacity, 0., 1.) * 2.;
-    }
-  float smin(float a, float b, float k) {
-      float res = exp(-k*a) + exp(-k*b);
-      return -log(res)/k;
-  }
-
-    void main() {
-        vec2 uv = (gl_FragCoord.xy - 0.5 * u_resolution.xy);
-
-        if(u_resolution.y < u_resolution.x) {
-          uv /= u_resolution.y;
-        } else {
-          uv /= u_resolution.x;
-        }
-
-        // uv.x += sin(u_time) * .5;
-
-        vec3 colour = vec3(0.);
-        vec3 layercolour = vec3(0.);
-
-        float opacity = 1.;
-        float opacity_sum = 1.;
-
-        for(int i = 1; i <= layers; i++) {
-          vec2 id;
-          vec3 layer = renderLayer(i, layers, uv, opacity, id, colour * clamp(1. - length(uv) * .8, 0., 1.));
-          layercolour = layer *2.;
-          float t = u_time * .1 + (1. + length(id));
-          // vec3 cellcolour = vec3(sin(t)*0.2, cos(t)*0.2, cos(t*.3)*0.3)*.5+.5;
-          vec3 cellcolour = colour*(1. + length(id))*.5+.2;
-          colour = mix(colour, cellcolour, layercolour);
-          opacity_sum += opacity;
-        }
-
-        gl_FragColor = vec4(colour*1.5 * (1. - length(uv) * .5 + .5),1.0);
-      // gl_FragColor *= gl_FragColor;
-      // gl_FragColor += gl_FragColor.brga;
-      
-    }
-    </script>
-    <div id="web-gl-wrapper"></div>
+    <canvas></canvas>
     <script src="https://www.gstatic.com/firebasejs/7.9.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.9.1/firebase-analytics.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.9.1/firebase-performance.js"></script>
