--- a/index.html
+++ b/index.html
@@ -120,6 +120,8 @@
         <br />
         <a href="https://ivy.run/lastfm">last.fm</a> |
         <a href="https://ivy.run/spotify">Spotify</a>
+        <br />
+        <a href="tg://proxy?server=mt5.proxy.0xf6.moe&port=443&secret=cb4a765b8450e6665d7cd5d2791204af">telegram proxy</a>
       </div>
     </div>
     <canvas></canvas>
