--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
     <link rel="icon" type="image/png" href="resources/@favicon.png" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-
+    <link rel="stylesheet" href="fira_code.css" />
     <link rel="stylesheet" href="@alcohol.css" />
   </head>
 
