rm clicpstudio and add shikimori

--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
 
 -->
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <title>Yuuki Wesp</title>
     <meta content="IE=edge" http-equiv="X-UA-Compatible" />
@@ -55,19 +56,13 @@
     <meta name="copyright" content="Yuuki Wesp" />
     <meta name="yandex" content="noyaca" />
 
-    <meta
-      name="Description"
-      content="Yuuki Wesp is a hardware engineer, 3D designer and DNA Processor"
-    />
+    <meta name="Description" content="Yuuki Wesp is a hardware engineer, 3D designer and DNA Processor" />
     <!-- OG -->
     <meta property="og:url" content="https://0xf6.moe/" />
     <meta property="og:site_name" content="Yuuki Wesp" />
     <meta property="og:title" content="Yuuki Wesp" />
     <meta property="og:type" content="website" />
-    <meta
-      property="og:description"
-      content="Yuuki Wesp is a hardware engineer, 3D designer and DNA Processor"
-    />
+    <meta property="og:description" content="Yuuki Wesp is a hardware engineer, 3D designer and DNA Processor" />
     <meta property="og:image:height" content="522" />
     <meta property="og:image:width" content="842" />
     <meta property="og:image" content="resources/@og-842x522.png" />
@@ -78,84 +73,73 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <link rel="stylesheet" href="fira_code.css" />
     <link rel="stylesheet" href="@alcohol.css" />
-  </head>
+</head>
 
-  <body>
+<body>
     <div id="wrapper">
-      <img id="base" src="resources/@no-u=[outline].png" />
-      <h4>Yuuki Wesp</h4>
-      <hr />
-      🧬🔬🦠
-      <br />
-      Hardware engineer;
-      <br />
-      3D designer, DNA Processor;
-      <br />
-      GameDev, Robotics;
-      <br />
-      💖 C#, Q#, X#, C++, asm, R 💖
-      <br />
-      <a title="Telegram" href="https://ivy.run/telegram">
+        <img id="base" src="resources/@no-u=[outline].png" />
+        <h4>Yuuki Wesp</h4>
+        <hr /> 🧬🔬🦠
+        <br /> Hardware engineer;
+        <br /> 3D designer, DNA Processor;
+        <br /> GameDev, Robotics;
+        <br /> 💖 C#, Q#, X#, C++, asm, R 💖
+        <br />
+        <a title="Telegram" href="https://ivy.run/telegram">
         @ivysola
       </a>
-      <a title="Discord" href="https://ivy.run/discord">
+        <a title="Discord" href="https://ivy.run/discord">
         Cytosine#1448
       </a>
-      <br />
-      <a
-        title="Clip Studio Profile"
-        href="https://ivy.run/clip-studio"
-      >
-        Clip Studio Profile
-      </a>
-      <hr />
-      <div id="bottom">
-        <a href="https://ivy.run/github">github</a> |
-        <a href="https://ivy.run/keybase">keybase</a> |
-        <a href="https://ivy.run/mal">MAL</a>
-        <br />
-        <a href="https://ivy.run/codestats">codestats</a> |
-        <a href="https://ivy.run/artstation">artstation</a> |
-        <a href="https://ivy.run/twitter">twitter</a>
-        <br />
-        <a href="https://ivy.run/lastfm">last.fm</a> |
-        <a href="https://ivy.run/spotify">Spotify</a>
-        <br />
-        <a href="tg://proxy?server=mt5.proxy.0xf6.moe&port=443&secret=cb4a765b8450e6665d7cd5d2791204af">telegram proxy</a>
-      </div>
+        <hr />
+        <div id="bottom">
+            <a href="https://ivy.run/github">github</a> |
+            <a href="https://ivy.run/keybase">keybase</a> |
+            <a href="https://ivy.run/shikimori">shikimori</a>
+            <br />
+            <a href="https://ivy.run/codestats">codestats</a> |
+            <a href="https://ivy.run/artstation">artstation</a> |
+            <a href="https://ivy.run/twitter">twitter</a>
+            <br />
+            <a href="https://ivy.run/lastfm">last.fm</a> |
+            <a href="https://ivy.run/spotify">Spotify</a>
+            <br />
+            <a href="tg://proxy?server=mt5.proxy.0xf6.moe&port=443&secret=cb4a765b8450e6665d7cd5d2791204af">telegram proxy</a>
+        </div>
     </div>
     <canvas></canvas>
     <script src="https://www.gstatic.com/firebasejs/7.9.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.9.1/firebase-analytics.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.9.1/firebase-performance.js"></script>
     <script>
-      var firebaseConfig = {
-        apiKey: "AIzaSyCUm2XU-INO-bx0cJclYB1S8zjMxP3Dtks",
-        authDomain: "xf6-moe.firebaseapp.com",
-        databaseURL: "https://xf6-moe.firebaseio.com",
-        projectId: "xf6-moe",
-        storageBucket: "xf6-moe.appspot.com",
-        messagingSenderId: "606269212555",
-        appId: "1:606269212555:web:dd56c0e0f9f0a38df5d18e",
-        measurementId: "G-SYKV7GQB24"
-      };
-      firebase.initializeApp(firebaseConfig);
-      firebase.analytics();
-      firebase.performance();
+        var firebaseConfig = {
+            apiKey: "AIzaSyCUm2XU-INO-bx0cJclYB1S8zjMxP3Dtks",
+            authDomain: "xf6-moe.firebaseapp.com",
+            databaseURL: "https://xf6-moe.firebaseio.com",
+            projectId: "xf6-moe",
+            storageBucket: "xf6-moe.appspot.com",
+            messagingSenderId: "606269212555",
+            appId: "1:606269212555:web:dd56c0e0f9f0a38df5d18e",
+            measurementId: "G-SYKV7GQB24"
+        };
+        firebase.initializeApp(firebaseConfig);
+        firebase.analytics();
+        firebase.performance();
     </script>
 
     <script src="https://unpkg.com/magic-snowflakes/dist/snowflakes.min.js"></script>
     <script src="scripts/@2019-nCoV.js"></script>
     <script>
-      var _ = new Date(),
-        m = _.getMonth(),
-        d = _.getDate();
+        var _ = new Date(),
+            m = _.getMonth(),
+            d = _.getDate();
 
-      if ((m === 11 && d > 25) || (m === 0 && d < 10)) {
-        Snowflakes();
-        document.getElementById("base").src =
-          "resources/@no-u=[outline]-[new-year].png";
-      }
+        if ((m === 11 && d > 25) || (m === 0 && d < 10)) {
+            Snowflakes();
+            document.getElementById("base").src =
+                "resources/@no-u=[outline]-[new-year].png";
+        }
     </script>
-  </body>
+</body>
+
 </html>
