--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
     <link rel="stylesheet" href="fira_code.css" />
     <link rel="stylesheet" href="@alcohol.css" />
     <link rel="stylesheet" href="spotify-anthem.css" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css">
 </head>
 
 <body>
@@ -165,6 +166,8 @@
 
     <script src="https://unpkg.com/magic-snowflakes/dist/snowflakes.min.js"></script>
     <script src="scripts/@2019-nCoV.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.2/axios.min.js"></script>
     <script src="scripts/spotify-anthem.js"></script>
     <script>
         var _ = new Date(),
