--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
             <div id="player-content">
                 <a id="buffer-box" href="https://github.com/0xF6/spotify-anthem" target="_blank">Spotify Anthem</a>
                 <div id="album-art">
-                    <img src="" class="active" id="_1">
+                    <img src="https://i.scdn.co/image/ab67616d0000b273597061b5005caadad637460a" class="active" id="_1">
                 </div>
                 <div id="player-controls">
                     <div class="control">
