--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
 <body>
     <div id="wrapper">
-        <img id="base" src="resources/@no-u=[outline].png" />
+        <img id="base" class="main_art" src="resources/@no-u=[outline].png" />
         <h4>Yuuki Wesp</h4>
         <hr /> 🧬🔬🦠
         <br /> Hardware engineer;
