--- a/index.html
+++ b/index.html
@@ -186,8 +186,7 @@
                     <a href="https://ivy.run/shikimori">shikimori</a>
                     <br>
                     <a href="https://ivy.run/codestats">codestats</a> |
-                    <a href="https://ivy.run/artstation">artstation</a> |
-                    <a href="https://ivy.run/twitter">twitter</a>
+                    <a href="https://ivy.run/artstation">artstation</a>
                     <br>
                     <a href="https://ivy.run/lastfm">last.fm</a> |
                     <a href="https://ivy.run/spotify">Spotify</a>
