--- a/index.html
+++ b/index.html
@@ -190,6 +190,9 @@
                     <br>
                     <a href="https://ivy.run/lastfm">last.fm</a> |
                     <a href="https://ivy.run/spotify">Spotify</a>
+                    <br>
+                    <a href="https://ivy.run/steam">Steam</a> |
+                    <a href="https://ivy.run/instagram">Instagram</a>
                 </div>
             </div>
         </div>
