--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                 <br> Hardware engineer;
                 <br> 3D design, Computer Science;
                 <br> GameDev, Robotics;
-                <br> 💖 C#, Q#, X#, C++, asm, R 💖
+                <br> 💖 C#, Q#, C++, asm, R 💖
                 <br>
                 <a title="Telegram" href="https://ivy.run/telegram">
                   @ivysola
