--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         @ivysola
       </a>
         <a title="Discord" href="https://ivy.run/discord">
-        Cytosine#1448
+        ivysola#6666
       </a>
         <hr>
         <div id="bottom">
@@ -171,10 +171,10 @@
                 <img id="base" src="resources/@no-u=[outline].png">
                 <h4>Yuuki Wesp</h4>
                 <hr> 🧬🔬🦠
-                <br> Hardware engineer;
-                <br> 3D design, Computer Science;
-                <br> GameDev, Robotics;
-                <br> 💖 C#, Q#, C++, asm, R 💖
+                <br> PCB\Hardware Engineer;
+                <br> 2D\3D\VFX Design;
+                <br> Game Network Engineer, Robotics;
+                <br> 💖 C#, R, C++, Vue 💖
                 <br>
                 <a title="Telegram" href="https://ivy.run/telegram">
                   @ivysola
@@ -189,10 +189,10 @@
                     <a href="https://ivy.run/artstation">artstation</a>
                     <br>
                     <a href="https://ivy.run/lastfm">last.fm</a> |
-                    <a href="https://ivy.run/spotify">Spotify</a>
+                    <a href="https://ivy.run/spotify">spotify</a>
                     <br>
-                    <a href="https://ivy.run/steam">Steam</a> |
-                    <a href="https://ivy.run/instagram">Instagram</a>
+                    <a href="https://ivy.run/steam">steam</a> |
+                    <a>discord ivysola#6666</a>
                 </div>
             </div>
         </div>
