--- a/index.html
+++ b/index.html
@@ -181,18 +181,18 @@
                 </a>
                 <hr>
                 <div id="bottom">
-                    <a href="https://ivy.run/github">github</a> |
-                    <a href="https://ivy.run/keybase">keybase</a> |
-                    <a href="https://ivy.run/shikimori">shikimori</a>
+                    <a href="https://ivy.run/github">Github</a> |
+                    <a href="https://ivy.run/keybase">Keybase</a> |
+                    <a href="https://ivy.run/shikimori">Shikimori</a>
                     <br>
-                    <a href="https://ivy.run/codestats">codestats</a> |
-                    <a href="https://ivy.run/artstation">artstation</a>
+                    <a href="https://ivy.run/codestats">CodeStats</a> |
+                    <a href="https://ivy.run/artstation">Artstation</a>|
+                    <a href="https://ivy.run/artstation">My arts</a>
                     <br>
-                    <a href="https://ivy.run/lastfm">last.fm</a> |
-                    <a href="https://ivy.run/spotify">spotify</a>
+                    <a href="https://ivy.run/lastfm">Last.fm</a> |
+                    <a href="https://ivy.run/spotify">Spotify</a>
                     <br>
-                    <a href="https://ivy.run/steam">steam</a> |
-                    <a>discord ivysola#6666</a>
+                    <a href="https://ivy.run/steam">Steam</a>
                 </div>
             </div>
         </div>
