--- a/index.html
+++ b/index.html
@@ -186,8 +186,7 @@
                     <a href="https://ivy.run/shikimori">Shikimori</a>
                     <br>
                     <a href="https://ivy.run/codestats">CodeStats</a> |
-                    <a href="https://ivy.run/artstation">Artstation</a>|
-                    <a href="https://ivy.run/artstation">My arts</a>
+                    <a href="https://ivy.run/artstation">Artstation</a>
                     <br>
                     <a href="https://ivy.run/lastfm">Last.fm</a> |
                     <a href="https://ivy.run/spotify">Spotify</a>
