--- a/index.html
+++ b/index.html
@@ -176,22 +176,17 @@
                 <br> Game Network Engineer, Robotics;
                 <br> 💖 C#, R, C++, Vue 💖
                 <br>
-                <a title="Telegram" href="https://ivy.run/telegram">
+                <a title="Telegram" href="https://api.0xf6.moe/telegram">
                   @ivysola
                 </a>
                 <hr>
                 <div id="bottom">
-                    <a href="https://ivy.run/github">Github</a> |
-                    <a href="https://ivy.run/keybase">Keybase</a> |
-                    <a href="https://ivy.run/shikimori">Shikimori</a>
+                    <a href="https://api.0xf6.moe/github">Github</a> |
+                    <a href="https://api.0xf6.moe/keybase">Keybase</a> |
+                    <a href="https://api.0xf6.moe/shikimori">Shikimori</a>
                     <br>
-                    <a href="https://ivy.run/codestats">CodeStats</a> |
-                    <a href="https://ivy.run/artstation">Artstation</a>
-                    <br>
-                    <a href="https://ivy.run/lastfm">Last.fm</a> |
-                    <a href="https://ivy.run/spotify">Spotify</a>
-                    <br>
-                    <a href="https://ivy.run/steam">Steam</a>
+                    <a href="https://api.0xf6.moen/codestats">CodeStats</a> |
+                    <a href="https://api.0xf6.moe/artstation">Artstation</a>
                 </div>
             </div>
         </div>
