--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                 <br> 💖 C#, R, C++, Vue 💖
                 <br>
                 <a title="Telegram" href="https://api.0xf6.moe/telegram">
-                  @ivysola
+                  @yuuki
                 </a>
                 <hr>
                 <div id="bottom">
